--- a/styles.css
+++ b/styles.css
@@ -6,33 +6,40 @@ body{
   margin:0;
 }
 h1{
+  font-size:5.625rem;/*1em=16px=100%=1rem (rem is indepedent of parent sizes)*/
   font-family: 'Sacramento', cursive;
+  margin:50px auto 0 auto;
+  color:#66BFBF;
 }
 h2{
+  font-size:2.5rem;
   font-family: 'Montserrat', sans-serif;
+  color:#66BFBF;
+  font-weight:normal;
 }
 h3{
   font-family: 'Montserrat', sans-serif;
+  color:#11999E;
+}
+a{
+  color:#11999E;
 }
 .top-container{
   position:relative;
   padding-top:100px;
 }
 .mountain{
-  width:719px;
-  height:350px;
+  width:70%;
 }
 .top-cloud{
   position:absolute;
-  width:100Px;
-  height:60Px;
+  width:10%;
   right:300px;
   top:50px;
 }
 .bottom-cloud{
   position:absolute;
-  width:100Px;
-  height:60Px;
+  width:10%;
   left:300px;
   margin-bottom:300px;
 }
@@ -42,7 +49,22 @@ h3{
 .bottom-container{
 
 }
+.skill-row{
+  width:50%;
+  margin: 100px auto;
+  text-align:left;
+  line-height:2;
+}
 .photo{
-  height:100px;
-  width:auto;
+  width:8%;
+  border-radius:40%;
+}
+.hacker-img{
+  float:left;
+  margin-right:30px;
+}
+.fire-img{
+  width:20%;
+  float:right;
+  margin-left:30px;
 }
